2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/mips.exp: Simplify enabling of MIPS16 testing.

2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/at-1.d: Handle ECOFF relocations.
	* gas/mips/eret-1.d: Handle ECOFF.
	* gas/mips/eret-2.d: Likewise.
	* gas/mips/eret-3.d: Likewise.
	* gas/mips/mips.exp: Only run "aent" for ELF.

2010-10-24  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/ld.s: Adjust to let SD, L.D, S.D, LDC1 and SDC1
	macros to be tested, according to the "tsd", "tl_d", "ts_d",
	"tldc1" and "tsdc1" symbols.
	* gas/mips/sd.d: New test.
	* gas/mips/ecoff@sd.d: Likewise, ECOFF version.
	* gas/mips/mips1@ecoff@sd.d: Likewise, MIPS I/ECOFF version.
	* gas/mips/r3000@ecoff@sd.d: Likewise, R3000/ECOFF version.
	* gas/mips/r3900@ecoff@sd.d: Likewise, R3900/ECOFF version.
	* gas/mips/mips2@ecoff@sd.d: Likewise, MIPS II/ECOFF version.
	* gas/mips/mips32@ecoff@sd.d: Likewise, MIPS32/ECOFF version.
	* gas/mips/mips32r2@ecoff@sd.d: Likewise, MIPS32r2/ECOFF
	version.
	* gas/mips/sd-forward.d: New test.
	* gas/mips/ecoff@sd-forward.d: Likewise, ECOFF version.
	* gas/mips/mips1@ecoff@sd-forward.d: Likewise, MIPS I/ECOFF
	version.
	* gas/mips/r3000@ecoff@sd-forward.d: Likewise, R3000/ECOFF
	version.
	* gas/mips/r3900@ecoff@sd-forward.d: Likewise, R3900/ECOFF
	version.
	* gas/mips/mips2@ecoff@sd-forward.d: Likewise, MIPS II/ECOFF
	version.
	* gas/mips/mips32@ecoff@sd-forward.d: Likewise, MIPS32/ECOFF
	version.
	* gas/mips/mips32r2@ecoff@sd-forward.d: Likewise, MIPS32r2/ECOFF
	version.
	* gas/mips/l_d.d: New test.
	* gas/mips/mips1@l_d.d: Likewise, MIPS I version.
	* gas/mips/r3000@l_d.d: Likewise, R3000 version.
	* gas/mips/r3900@l_d.d: Likewise, R3900 version.
	* gas/mips/l_d-forward.d: New test.
	* gas/mips/mips1@l_d-forward.d: Likewise, MIPS I version.
	* gas/mips/r3000@l_d-forward.d: Likewise, R3000 version.
	* gas/mips/r3900@l_d-forward.d: Likewise, R3900 version.
	* gas/mips/s_d.d: New test.