@@ -1,0 +1,70 @@
+	.text
+	je	.LBB0_46
+        .zero 6, 0x90
+	je	.LBB0_46
+.LBB0_8:
+        .zero 134, 0x90
+	je	.LBB0_8
+        .zero 4, 0x90
+	je	.LBB0_8
+        .zero 8, 0x90
+	je	.LBB0_46
+        .zero 10, 0x90
+	je	.LBB0_8
+        .zero 4, 0x90
+	je	.LBB0_8
+	movq	304(%rsp), %r14
+        .zero 2, 0x90
+	je	.LBB0_8
+	je	.LBB0_8
+	movq	256(%rsp), %r14
+        .zero 3, 0x90
+	je	.LBB0_46
+        .zero 10, 0x90
+	je	.LBB0_8
+        .zero 13, 0x90
+	je	.LBB0_8
+	leaq	432(%rsp), %rsi
+	je	.LBB0_8
+	movq	176(%rsp), %r14
+	je	.LBB0_46
+	je	.LBB0_8
+	je	.LBB0_8
+	leaq	424(%rsp), %rsi
+	je	.LBB0_8
+        .zero 22, 0x90
+	je	.LBB0_8
+        .zero 11, 0x90
+	je	.LBB0_8
+	leaq	416(%rsp), %rsi
+	je	.LBB0_8
+        .zero 21, 0x90
+	je	.LBB0_46
+        .zero 8, 0x90
+	je	.LBB0_8
+        .zero 11, 0x90
+	je	.LBB0_8
+        .zero 7, 0x90
+	je	.LBB0_8
+        .zero 22, 0x90
+	je	.LBB0_46
+        .zero 131, 0x90
+.LBB0_46:
+	.align	16, 0x90
+	movq	168(%rsp), %rax
+        .zero 3, 0x90
+	je	.LBB1_35
+	.align	16, 0x90
+        .zero 2, 0x90
+	je	.LBB1_35
+        .zero 37, 0x90
+	je	.LBB1_35
+        .zero 59, 0x90
+	je	.LBB1_35
+        .zero 68, 0x90
+	je	.LBB1_17
+	.align	16, 0x90
+.LBB1_17:
+        .zero 85, 0x90
+.LBB1_35:
+	nop
